--- a/Birdland.html
+++ b/Birdland.html
@@ -129,7 +129,7 @@ window.get</script><tw-passagedata pid="1" name="Start" tags="space" position="1
 [[Call your best friend Henricand ask for advice-&gt;Call Henric]]
 [[Go home to apartment-&gt;Get frisked]]
 [[Discard token-&gt;Discard token (arrive at apartment)]]</tw-passagedata><tw-passagedata pid="18" name="Leave token" tags="" position="1379,1236" size="100,100">Leave the token
-- Dead end</tw-passagedata><tw-passagedata pid="19" name="Call Henric" tags="" position="1153,1555.6666666666667" size="100,100">Henric: What&#39;s up Keith? I heard you got locked up?
+- Dead end</tw-passagedata><tw-passagedata pid="19" name="Call Henric" tags="" position="1153,1555" size="100,100">Henric: What&#39;s up Keith? I heard you got locked up?
 (live:3s)[Keith: Yes, had a small arument that got out of hand in the diner earlier today...]
 (live:6s)[Henric: Small argument? That dude ain&#39;t gonna fly anymore...]
 (live:9s)[Keith: ...]
@@ -139,8 +139,8 @@ window.get</script><tw-passagedata pid="1" name="Start" tags="space" position="1
 (live:25s)[Henric: Stay where you are, no go and hide somewhere. You do can&#39;t be found with that in your posseion...]
 (live:30s)[Henric: I&#39;ll come to you, wait there I&#39;ll be there in 10 minutes.]
 (live:33s)[Keith: OK, I&#39;ll wait.]
-(live:36s)[(goto: &quot;Henric finds you&quot;)]</tw-passagedata><tw-passagedata pid="20" name="Get frisked" tags="" position="987.3333333333334,1481.3333333333333" size="100,100">You get frisked by security personel and sent back to custody.
-- Dead end</tw-passagedata><tw-passagedata pid="21" name="Discard token (arrive at apartment)" tags="" position="1312.3333333333333,1485" size="100,100">You discard of the token and head home to your apartment.
+(live:36s)[(goto: &quot;Henric finds you&quot;)]</tw-passagedata><tw-passagedata pid="20" name="Get frisked" tags="" position="987,1481" size="100,100">You get frisked by security personel and sent back to custody.
+- Dead end</tw-passagedata><tw-passagedata pid="21" name="Discard token (arrive at apartment)" tags="" position="1312,1485" size="100,100">You discard of the token and head home to your apartment.
 (live:3s)[(goto: &quot;Apartment&quot;)]</tw-passagedata><tw-passagedata pid="22" name="Henric finds you" tags="" position="1151,1664" size="100,100">Henric finds you and you show the trinket...
 (live:5s)[(goto: &quot;Activate token&quot;)]</tw-passagedata><tw-passagedata pid="23" name="Activate token" tags="" position="1951,1259" size="100,100">(You accidently activate the memory token)
 
@@ -196,7 +196,7 @@ Also, my stomach cannot take eating these seeds all the time...
 [[Read entry #2-&gt;Read entry #2]]
 [[Go back to office-&gt;Home office]]</tw-passagedata><tw-passagedata pid="33" name="Read entry #2" tags="" position="1703,1169" size="100,100">//Entry #1 - June 15th. 2XXX
 
-Since all the Flightless have been locked up in a ghetto recently. We rarely have contact with the outside world. Food supply is also super limited. I&#39;m hate Flighers&#39; food
+Since all the Flightless have been locked up in a ghetto recently. We rarely have contact with the outside world. Food supply is also super limited. I hate Flyer&#39;s food
 //
 [[Read entry #1-&gt;Read entry #1]]
 [[Go back to office-&gt;Home office]]</tw-passagedata><tw-passagedata pid="34" name="Argument Cashier" tags="" position="2397,1105" size="100,100">Cashier gets angry,
@@ -205,7 +205,7 @@ Since all the Flightless have been locked up in a ghetto recently. We rarely hav
 [[Cut off cashiers wings-&gt;Hurt cashier]]</tw-passagedata><tw-passagedata pid="35" name="Hurt cashier" tags="" position="2397,1255" size="100,100">&quot;Security personel enters the store and a mexican standoff is initiated&quot;
 (live: 3s)[&quot;Hands up wingless, our we&#39;ll shoot&quot;]
 [[Surrender-&gt;Surrender]]
-[[Hope for the best-&gt;Hope for the best]]</tw-passagedata><tw-passagedata pid="36" name="Trust Modine" tags="" position="1880,1409" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="37" name="Don&#39;t trust Modine" tags="" position="2028,1409" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="38" name="The end (1)" tags="" position="1955,2015.0000000000002" size="100,100">Sad and frustrated after his flightless friends didn&#39;t want to take part in destroying Five, you decide to go off on your own adventure.
+[[Hope for the best-&gt;Hope for the best]]</tw-passagedata><tw-passagedata pid="36" name="Trust Modine" tags="" position="1880,1409" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="37" name="Don&#39;t trust Modine" tags="" position="2028,1409" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="38" name="The end (1)" tags="" position="1955,2015" size="100,100">Sad and frustrated after his flightless friends didn&#39;t want to take part in destroying Five, you decide to go off on your own adventure.
 
 You put on the wings, start jumping and flapping. You can feel your feet lift from the ground, slowly first, then faster and faster you leave the ground.
 
