--- a/Birdland.html
+++ b/Birdland.html
@@ -94,7 +94,7 @@ function turnOffAudio() {
 window.get</script><tw-passagedata pid="1" name="Start" tags="space" position="1973,220" size="100,100">You wake up in the morning, get dressed and go to the communal dining room.
 
 [[Sit at table 1-&gt;Sit at table 1]]
-[[Sit at table 2-&gt;Sit at table 2]]</tw-passagedata><tw-passagedata pid="2" name="Sit at table 1" tags="" position="1914,410" size="100,100">You can&#39;t sit here, you have no wings... (or &quot;flightless cannot sit here&quot;)
+[[Sit at table 2-&gt;Sit at table 2]]</tw-passagedata><tw-passagedata pid="2" name="Sit at table 1" tags="" position="1908.9999999999998,411.6666666666667" size="100,100">Hey! The flightless can&#39;t sit here, you have no wings!
 [[Start an argument-&gt;Start an argument]]
 [[Sit at table 2 instead-&gt;Sit at table 2]]</tw-passagedata><tw-passagedata pid="3" name="Sit at table 2" tags="" position="2072,412" size="100,100">You get served a meal of bird-seeds
 [[Pledge your thanks to the serving staff-&gt;Pledge your thanks to the serving staff]]
