update to intro text

--- a/Birdland.html
+++ b/Birdland.html
@@ -91,15 +91,18 @@ function turnOffAudio() {
 	audio.stop();
 }
 
-window.get</script><tw-passagedata pid="1" name="Start" tags="space" position="1973,220" size="100,100">You wake up in the morning, get dressed and go to the communal dining room.
+window.get</script><tw-passagedata pid="1" name="Start" tags="space" position="1973,220" size="100,100">A 1 000 years ago, the fashion designer Charles Modine found a way to help people fly.
+
+
+You wake up in the morning, get dressed and go to the communal dining room.
 
 [[Sit at table 1-&gt;Sit at table 1]]
-[[Sit at table 2-&gt;Sit at table 2]]</tw-passagedata><tw-passagedata pid="2" name="Sit at table 1" tags="" position="1908.9999999999998,411.6666666666667" size="100,100">Hey! The flightless can&#39;t sit here, you have no wings!
+[[Sit at table 2-&gt;Sit at table 2]]</tw-passagedata><tw-passagedata pid="2" name="Sit at table 1" tags="" position="1908,411" size="100,100">Hey! The flightless can&#39;t sit here, you have no wings!
 [[Start an argument-&gt;Start an argument]]
 [[Sit at table 2 instead-&gt;Sit at table 2]]</tw-passagedata><tw-passagedata pid="3" name="Sit at table 2" tags="" position="2072,412" size="100,100">You get served a meal of bird-seeds
 [[Pledge your thanks to the serving staff-&gt;Pledge your thanks to the serving staff]]
 [[&quot;I can&#39;t eat this&quot;-&gt;&quot;I can&#39;t eat this&quot;]]</tw-passagedata><tw-passagedata pid="4" name="Start an argument" tags="" position="1752,410" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="Pledge your thanks to the serving staff" tags="" position="2015,618" size="100,100">You finish your meal reluctantly and you go about to return your tray...
-(live:2s)[(goto: &quot;Leave Diner&quot;)]</tw-passagedata><tw-passagedata pid="6" name="&quot;I can&#39;t eat this&quot;" tags="" position="2125,622" size="100,100">&quot;Well that&#39;s your problem&quot;
+(live:2s)[(goto: &quot;Leave Diner&quot;)]</tw-passagedata><tw-passagedata pid="6" name="&quot;I can&#39;t eat this&quot;" tags="" position="2125,620" size="100,100">&quot;Well that&#39;s your problem&quot;
 (live:2s)[(goto: &quot;Leave Diner&quot;)]</tw-passagedata><tw-passagedata pid="7" name="Leave Diner" tags="" position="2067,759" size="100,100">You leave the diner, where do you want to go?
 [[Go to apartment-&gt;Apartment]]
 [[Go for a walk in the mall-&gt;Go to the mall]]</tw-passagedata><tw-passagedata pid="8" name="Trip over person" tags="" position="1838,582" size="100,100">You accidentally trip over a fellow community members wingtip...
