--- a/Birdland.html
+++ b/Birdland.html
@@ -128,9 +128,9 @@ You wake up in the morning, get dressed and go to the communal dining room.
 (live:10s)[(goto: &quot;Guards enter&quot;)]</tw-passagedata><tw-passagedata pid="16" name="Guards enter" tags="" position="1246,1176" size="100,100">Guards are entering the cell to remove the stranger who passes you a memory token....
 (live: 3s)[You are released from custody awaiting judgment]
 [[Bring token-&gt;Bring token]]
-[[Leave token-&gt;Leave token]]</tw-passagedata><tw-passagedata pid="17" name="Bring token" tags="" position="1171,1326" size="100,100">You now are in possesion of illegal goods, what do you want do?
-[[Call your best friend Henricand ask for advice-&gt;Call Henric]]
-[[Go home to apartment-&gt;Get frisked]]
+[[Leave token-&gt;Leave token]]</tw-passagedata><tw-passagedata pid="17" name="Bring token" tags="" position="1171,1326" size="100,100">You now are in possession of illegal goods, what do you want to do?
+[[Call your best friend Henric and ask for advice-&gt;Call Henric]]
+[[Go to apartment-&gt;Get frisked]]
 [[Discard token-&gt;Discard token (arrive at apartment)]]</tw-passagedata><tw-passagedata pid="18" name="Leave token" tags="" position="1379,1236" size="100,100">Leave the token
 - Dead end</tw-passagedata><tw-passagedata pid="19" name="Call Henric" tags="" position="1153,1555" size="100,100">Henric: What&#39;s up Keith? I heard you got locked up?
 (live:3s)[Keith: Yes, had a small arument that got out of hand in the diner earlier today...]
@@ -142,8 +142,8 @@ You wake up in the morning, get dressed and go to the communal dining room.
 (live:25s)[Henric: Stay where you are, no go and hide somewhere. You do can&#39;t be found with that in your posseion...]
 (live:30s)[Henric: I&#39;ll come to you, wait there I&#39;ll be there in 10 minutes.]
 (live:33s)[Keith: OK, I&#39;ll wait.]
-(live:36s)[(goto: &quot;Henric finds you&quot;)]</tw-passagedata><tw-passagedata pid="20" name="Get frisked" tags="" position="987,1481" size="100,100">You get frisked by security personel and sent back to custody.
-- Dead end</tw-passagedata><tw-passagedata pid="21" name="Discard token (arrive at apartment)" tags="" position="1312,1485" size="100,100">You discard of the token and head home to your apartment.
+(live:36s)[(goto: &quot;Henric finds you&quot;)]</tw-passagedata><tw-passagedata pid="20" name="Get frisked" tags="" position="987,1481" size="100,100">You get frisked by security personnel and sent back to custody.
+- Dead end</tw-passagedata><tw-passagedata pid="21" name="Discard token (arrive at apartment)" tags="" position="1312,1485" size="100,100">You discard the token and head home to your apartment.
 (live:3s)[(goto: &quot;Apartment&quot;)]</tw-passagedata><tw-passagedata pid="22" name="Henric finds you" tags="" position="1151,1664" size="100,100">Henric finds you and you show the trinket...
 (live:5s)[(goto: &quot;Activate token&quot;)]</tw-passagedata><tw-passagedata pid="23" name="Activate token" tags="" position="1951,1259" size="100,100">(You accidently activate the memory token)
 
@@ -158,7 +158,7 @@ and I&#39;m very sad to say, I am the reason for all of this.//]
 
 (live:26s)[//You see, humans are not supposed to have wings. Wings are for the birds.//]
 
-(live:32s)[//I now I realize coming here and sharing my knowledge and skill with them turned out to the biggest mistake of my life.//]
+(live:32s)[//I now I realize coming here and sharing my knowledge and skill with them turned out to be the biggest mistake of my life.//]
 
 (live:37s)[//But you can help me correct this mistake.&quot;//]
 
@@ -168,7 +168,7 @@ and I&#39;m very sad to say, I am the reason for all of this.//]
 [[Call your best-friend Henric-&gt;Speak to Henric]]
 </tw-passagedata><tw-passagedata pid="25" name="Home office" tags="" position="1864,1034" size="100,100">&#39;&#39;Home office&#39;&#39;
 [[Read journal entries-&gt;Read entries]]
-[[Go back to living room-&gt;Living room]]</tw-passagedata><tw-passagedata pid="26" name="Go to the mall" tags="" position="2305,822" size="100,100">Looking at clothes, but nothing fits your big legs och everything has holes for wings.
+[[Go back to living room-&gt;Living room]]</tw-passagedata><tw-passagedata pid="26" name="Go to the mall" tags="" position="2305,822" size="100,100">Looking at clothes, but nothing fits your big legs and everything has holes for wings.
 [[Go home to apartment again-&gt;Go home]]
 [[Ask cashier if they have anything for the flightless-&gt;Ask cashier]]</tw-passagedata><tw-passagedata pid="27" name="Speak to Henric" tags="" position="2191,1002" size="100,100">Your friend Henric is a mechanic. He goes regularly searching for spare parts in debris zones around Five.
 (live:3s)[He reveals that he found something interesting that he wishes you to see.]
@@ -187,7 +187,7 @@ and I&#39;m very sad to say, I am the reason for all of this.//]
 [[Read entry #2-&gt;Read entry #2]]
 
 [[Go back to office-&gt;Home office]]</tw-passagedata><tw-passagedata pid="31" name="Living room" tags="" position="2008,1035" size="100,100">&#39;&#39;Living room&#39;&#39;
-[[Go into to your home office again-&gt;Home office]]
+[[Go to your home office again-&gt;Home office]]
 [[Call your best-friend Henric-&gt;Speak to Henric]]
 </tw-passagedata><tw-passagedata pid="32" name="Read entry #1" tags="" position="1570,1167" size="100,100">//Entry #1 - June 27th. 2XXX (yesterday)
 
@@ -203,7 +203,7 @@ Since all the Flightless have been locked up in a ghetto recently. We rarely hav
 //
 [[Read entry #1-&gt;Read entry #1]]
 [[Go back to office-&gt;Home office]]</tw-passagedata><tw-passagedata pid="34" name="Argument Cashier" tags="" position="2397,1105" size="100,100">Cashier gets angry,
-(live:2s)[&quot;Get out of my story you wingless filth!&quot;]
+(live:2s)[&quot;Get out of my store you wingless filth!&quot;]
 [[Leave-&gt;Go home]]
 [[Cut off cashiers wings-&gt;Hurt cashier]]</tw-passagedata><tw-passagedata pid="35" name="Hurt cashier" tags="" position="2397,1255" size="100,100">&quot;Security personel enters the store and a mexican standoff is initiated&quot;
 (live: 3s)[&quot;Hands up wingless, our we&#39;ll shoot&quot;]
