--- a/Birdland.html
+++ b/Birdland.html
@@ -163,7 +163,7 @@ and I&#39;m very sad to say, I am the reason for all of this.//]
 (live:37s)[//But you can help me correct this mistake.&quot;//]
 
 [[Trust Modine-&gt;Trust Modine]]
-[[&lt;a style=&quot;color: #e32619;&quot;&#39;&gt;Don&#39;t trust Modine&lt;/a&gt;-&gt;Don&#39;t trust Modine]]</tw-passagedata><tw-passagedata pid="24" name="Apartment" tags="" position="2000,899" size="100,100">Arrives to the apartment. I am bored and annoyed. What should I do?
+[[&lt;a style=&quot;color: #e32619;&quot;&#39;&gt;Don&#39;t trust Modine&lt;/a&gt;-&gt;Don&#39;t trust Modine]]</tw-passagedata><tw-passagedata pid="24" name="Apartment" tags="" position="2000,899" size="100,100">Arrives to the apartment. &quot;I am bored and annoyed. What should I do?&quot;
 [[Go into to your home office and read your past journal entries-&gt;Home office]]
 [[Call your best-friend Henric-&gt;Speak to Henric]]
 </tw-passagedata><tw-passagedata pid="25" name="Home office" tags="" position="1864,1034" size="100,100">&#39;&#39;Home office&#39;&#39;
@@ -178,7 +178,7 @@ and I&#39;m very sad to say, I am the reason for all of this.//]
 (live:15s)[Keith: Wow, can I hold it?]
 (live:17s)[Henric: Sure.]
 (live:19s)[Henric hands you the memory token.]
-(live:21s)[(goto: &quot;Activate token&quot;)]</tw-passagedata><tw-passagedata pid="28" name="Go home" tags="" position="2194,895" size="100,100">On your way home to your apartment you bump into your best friend Henric.
+(live:21s)[(goto: &quot;Activate token&quot;)]</tw-passagedata><tw-passagedata pid="28" name="Go home" tags="" position="2194,895" size="100,100">On your way home to your apartment, you bump into your best friend Henric.
 (live:3s)[(goto: &quot;Speak to Henric&quot;)]</tw-passagedata><tw-passagedata pid="29" name="Ask cashier" tags="" position="2397,955" size="100,100">Cashier frowns and says in a sharp tone,
 &quot;We have a section for the flightless. If it doesn&#39;t suit you, you may leave.&quot;
 [[Ignore comment and go home-&gt;Go home]]
@@ -218,11 +218,11 @@ You put on the wings, start jumping and flapping. You can feel your feet lift fr
 
 You&#39;re heart is racing. You flap faster and faster, and finally you see the Emergency exit. You will not spend another day on Five.
 
-You open the door, and suddenly you&#39;re sucked out into space. You start flapping your wings again, but moving in space is not the same thing. It&#39;s hard to steer with your newly found wings. And where are you heading? You aim for the big yellow ball, people on Five said it provided the space station with energy, so I should check it out 
+You open the door, and suddenly you&#39;re sucked out into space. You start flapping your wings again, but moving in space is not the same thing. It&#39;s hard to steer with your newly found wings. And where are you heading? You aim for the big yellow ball, people on Five said it provided the space station with energy, so I should check it out... 
 
-But it gets warm, way too quickly. Something that smells like burnt plastic hits your nostrils. Why does it feel like you&#39;re loosing speed? Why is the sun getting closer? And the heat surely is worrying.
+But it gets warm, way too quickly. Something that smells like burnt plastic hits your nostrils. Why does it feel like you&#39;re loosing speed? And the heat surely is worrying.
 
-You&#39;re sweating, and all your flapping doesn&#39;t take you anywhere. The wings are coming loose, and suddenly you&#39;re falling  The heat is unbearable, the light is burning your eyes. THE END.</tw-passagedata></tw-storydata>
+You&#39;re sweating, and all your flapping doesn&#39;t take you anywhere. The wings are coming loose, and suddenly you&#39;re falling...The heat is unbearable, the light is burning your eyes. THE END.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
